--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Saved outputs
+**/*.npy
+
+# Downloaded data
+data/*
+
+# Libraries logs
+*.log
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
