Splitting up training and extraction scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
 # Saved outputs
 **/*.npy
+models/*
 
 # Downloaded data
 data/*
 
 # Libraries logs
 *.log
+
+# MacOS temporary files
+**/*.DS_Store
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
